fixed bug where number of data points remained too small when switching from 7 day timetrame to 3+ months

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,8 @@ h4 {
     text-align: center;
 }
 #controlPanel {
-    background-color: #ddd;
+    background-color: #eee;
+}
+body {
+    text-align: center;
 }
